# ScreenDoodle

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: make_ico.ps1
installer/: ScreenDoodle.iss
launcher/: package-lock.json  package.json
launcher/src/main/: appconfig.js  github.js  install.js  main.js  overlay.js  paths.js
launcher/src/preload/: preload.js
launcher/src/renderer/: app.js  index.html  styles.css
resources/: RCa07772  app.manifest  app.rc  resource.h
src/: canvas.cpp  canvas.h  common.h  config.cpp  config.h  main.cpp  settings.cpp  settings.h  state.cpp  state.h  tray.cpp  tray.h  updater.cpp  updater.h  widget.cpp  widget.h
